<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/back_icon"
        android:layout_width="20dp"
        android:layout_height="30dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:typeface="sans"
        android:layout_marginStart="54dp"
        android:text="@string/vaksin_dan_imunisasi"
        android:textStyle="bold"
        android:id="@+id/vaksin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="240dp"
        android:layout_below="@+id/vaksin"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:src="@drawable/virus" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="90dp"
            android:src="@drawable/verify" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="160dp"
            android:src="@drawable/bear" />

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/vaksin_covid_19"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="14sp"
            android:text="@string/cek_sertifikat_vaksin_anda_disini"
            android:layout_marginStart="100dp"
            android:layout_marginTop="44dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/verifikator_check_in"
            android:layout_marginStart="100dp"
            android:layout_marginTop="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="14sp"
            android:text="@string/verifikasi_sertifikat_vaksin_format_eu"
            android:layout_marginStart="100dp"
            android:layout_marginTop="114dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/imunisasi_anak"
            android:layout_marginStart="100dp"
            android:layout_marginTop="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="14sp"
            android:text="@string/cek_riwayat_imunisasi_anak_di_sini"
            android:layout_marginStart="100dp"
            android:layout_marginTop="184dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.cardview.widget.CardView>

</RelativeLayout>