<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/atas"
        android:backgroundTint="@color/blue"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-37dp"
        app:cardCornerRadius="50dp"
        android:layout_width="400dp"
        android:layout_height="150dp">
    <ImageView
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        android:src="@drawable/bcakwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/top_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/tangan"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/atas"
        android:src="@drawable/tangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/top_up_your"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_toEndOf="@+id/tangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/balance_here"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_toEndOf="@+id/tangan"
        android:layout_marginStart="22dp"
        android:layout_marginTop="200dp"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30sp"
        android:layout_centerInParent="false"
        android:layout_width="200dp"
        android:layout_height="40sp">

        <EditText
            android:hint="@string/min_rp5_000"
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="50dp">
            <Button
                android:layout_marginStart="230dp"
                android:layout_marginTop="200dp"
                android:textAllCaps="false"
                android:text="send"
                android:backgroundTint="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginStart="130dp"
                android:layout_marginTop="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cancel"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/top_up_"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="40dp"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>